--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 body{
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
 }
 
-/* headers section */
+/* ---------------
+headers section
+---------------*/
 .head-banner{
     background-color: #2D25A0;
      
@@ -28,7 +31,9 @@ body{
     height: 438px;
     transition: width 2s ease-in;
 }
-/* animation code here */
+/*--------------
+ animation code here 
+ ------------------*/
 .head-banner:hover .head-photo img{
    width: 300px;
    
@@ -50,10 +55,10 @@ body{
     margin-left: 10px;
     width: 15px;
 }
-/* akta hober dite tranzition kore hbe */
 
-
-/* payers sections start */
+/* -----------------
+payers sections star
+------------------ */
 .players{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -83,7 +88,9 @@ box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
     margin: 0;
 }
   
-/* chanel start */
+/* -----------
+chanel start 
+---------------*/
 .chanel{
 margin-top: 0;
 text-align: center;
@@ -102,7 +109,10 @@ text-align: center;
     height: 600px;
     padding: 20px;
 }
-/* gallary start */
+
+/* -----------
+gallary start
+----------------- */
 .gallary{
     padding: 0 2%;
     display: flex;
@@ -132,7 +142,9 @@ text-align: center;
     margin: 0px 10px 10px 0px;
 }
 
-/* footer section start*/
+/* ----------
+footer section start
+-------------*/
 .foot {
     display: flex;
     flex-direction: column;
@@ -167,8 +179,11 @@ footer p{
     color: black;
     font-size: 18px;
 }
-/* Satrt media query */
-/* mobile device */
+/* Satrt media query css start form here */
+
+/* -----------------
+mobile device 
+---------------*/
 @media only screen and (max-width:667px) {
     .banner-parents{
        display: flex;
@@ -193,7 +208,9 @@ footer p{
         margin-bottom:20px;
     }
 
-    /* payers sections start */
+/*-------------
+     payers sections start
+ ------------------- */
 .players{
     display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -203,7 +220,10 @@ footer p{
 .player title{
     font-size: 20px;
 }
-/* gallary start */
+
+/*--------------
+ gallary start 
+ --------------*/
 .gallary{
     padding: 0 2%;
     display: flex;
@@ -250,7 +270,9 @@ chanel start
         margin-bottom: 0;
         padding: 0;
     }
-/* footer section start*/
+/* --------------
+footer section start
+-------------------*/
 .foot {
     display: flex;
     flex-direction: column;
@@ -279,6 +301,9 @@ footer p {
     font-size: 16px;
 }
 }
+/*------------------
+ tablet device start form here
+ -------------- */
 @media only screen and (max-width:992px) and (min-width:668px){
     .banner-parents{
         display: flex;
@@ -298,14 +323,18 @@ footer p {
      .banner-tittle{
          font-Size : 40px;
      }
-/* payers sections start */
+/* ------------
+payers sections start
+------------- */
 .players{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     
 }
 
-/* gallary start */
+/* ----------
+gallary start
+---------------- */
 .gallary{
     padding: 0 2%;
     display: flex;
@@ -353,7 +382,9 @@ chanel start
         margin-bottom: 0;
     }
 
-/* footers start */
+/*------- 
+footers start
+------------- */
 .footer-logo img {
     width: 350px;
 }
