--- a/styles/style.css
+++ b/styles/style.css
@@ -45,6 +45,9 @@ headers section
     color: #ffffff;
     margin-bottom:27px;
 }
+.banner-info a{
+    text-decoration: none;
+}
 .banner-button{
     background-color: #E02C6D;
     padding: 10px 24px;
@@ -105,7 +108,7 @@ text-align: center;
     color: #545252;
 }
 .iframe {
-    width: 940px;
+    width: 920px;
     height: 600px;
     padding: 20px;
 }
@@ -210,7 +213,7 @@ mobile device
 
 /*-------------
      payers sections start
- ------------------- */
+ -------------------*/
 .players{
     display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -263,7 +266,7 @@ chanel start
         margin-bottom: 0;
     }
     .iframe {
-        width: 420px;
+        width: 340px;
         height: 300px;
         padding: 1s0px;
         margin-top:0 ;
@@ -359,7 +362,7 @@ gallary start
 }
 .photos-right img {
     height: 144px;
-    width: 100px;
+    width: 98px;
     margin: 0px 7px 4px 0px;
 }
 
