--- a/styles/style.css
+++ b/styles/style.css
@@ -76,10 +76,16 @@ payers sections star
 .player{
 padding: 15px;
 box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+overflow: hidden;
  }
    
 .player img{
     width: 100%;
+}
+.player-fame:hover .player img{
+    transform: scale(1.2) skew(180deg);
+    transition: transform 1s ease-in-out;
+    border-radius: 30px;
 }
 .player title{
     font-size: 28px;
