--- a/styles/style.css
+++ b/styles/style.css
@@ -81,11 +81,11 @@ overflow: hidden;
    
 .player img{
     width: 100%;
+    border-radius: 5px;
 }
 .player-fame:hover .player img{
-    transform: scale(1.2) skew(180deg);
+    transform: scale(1.2);
     transition: transform 1s ease-in-out;
-    border-radius: 30px;
 }
 .player title{
     font-size: 28px;
